--- a/practice/fundamentals/4th/MessagingAndNotification/app/build.gradle
+++ b/practice/fundamentals/4th/MessagingAndNotification/app/build.gradle
@@ -23,5 +23,5 @@ dependencies {
     //implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     //implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     //implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
 }
