--- a/assignments/advanced/3rd/DialogAssignment/app/build.gradle
+++ b/assignments/advanced/3rd/DialogAssignment/app/build.gradle
@@ -18,5 +18,5 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:support-v4:${supportLibVersion}"
+    implementation "com.android.support:support-v4:${supportLibVersion}"
 }
