--- a/practice/advanced/3rd/IncludePractice/app/build.gradle
+++ b/practice/advanced/3rd/IncludePractice/app/build.gradle
@@ -17,5 +17,5 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:support-v4:${supportLibVersion}"
+    implementation "com.android.support:support-v4:${supportLibVersion}"
 }
