--- a/practice/fundamentals/3rd/ResourceManagement/app/build.gradle
+++ b/practice/fundamentals/3rd/ResourceManagement/app/build.gradle
@@ -19,5 +19,5 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
 }
