--- a/practice/advanced/3rd/PreferencePractice/app/build.gradle
+++ b/practice/advanced/3rd/PreferencePractice/app/build.gradle
@@ -18,4 +18,6 @@ android {
 
 dependencies {
     implementation "com.android.support:support-v4:${supportLibVersion}"
+    implementation 'com.android.support:appcompat-v7:23.4.0'
+    //implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 }
